ANTLR/parser/littleduck_parser.go
// Code generated from LittleDuck.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // LittleDuck

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'programa'", "'var'", "'int'", "'float'", "'print'", "'if'", "'else'",
	"','", "':'", "';'", "'{'", "'}'", "'('", "')'", "'*'", "'+'", "'-'", "'/'",
	"'='", "'<'", "'>'", "'<>'",
}
var symbolicNames = []string{
	"", "PROGRAM", "VAR", "INT", "FLOAT", "PRINT", "IF", "ELSE", "COMMA", "COLON",
	"SEMICOLON", "LEFT_CURLY", "RIGHT_CURLY", "LEFT_ROUND", "RIGHT_ROUND",
	"STAR", "PLUS", "MINUS", "DIV", "EQUAL", "LESS_THAN", "GREATER_THAN", "NOT_EQUAL",
	"LET_ID", "LET_STRING", "LET_INT", "LET_FLOAT", "WHITESPACE",
}

var ruleNames = []string{
	"programa", "programa_vars", "vars", "vars_id", "vars_id_next", "vars_more",
	"bloque", "bloque_more", "tipo", "estatuto", "asignacion", "condicion",
	"condicion_else", "escritura", "escritura_params", "escritura_params_next",
	"expresion", "expresion_next", "exp", "exp_next", "termino", "termino_next",
	"factor", "factor_sign", "cte", "empty",
}

type LittleDuckParser struct {
	*antlr.BaseParser
}

// NewLittleDuckParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *LittleDuckParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewLittleDuckParser(input antlr.TokenStream) *LittleDuckParser {
	this := new(LittleDuckParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "LittleDuck.g4"

	return this
}

// LittleDuckParser tokens.
const (
	LittleDuckParserEOF          = antlr.TokenEOF
	LittleDuckParserPROGRAM      = 1
	LittleDuckParserVAR          = 2
	LittleDuckParserINT          = 3
	LittleDuckParserFLOAT        = 4
	LittleDuckParserPRINT        = 5
	LittleDuckParserIF           = 6
	LittleDuckParserELSE         = 7
	LittleDuckParserCOMMA        = 8
	LittleDuckParserCOLON        = 9
	LittleDuckParserSEMICOLON    = 10
	LittleDuckParserLEFT_CURLY   = 11
	LittleDuckParserRIGHT_CURLY  = 12
	LittleDuckParserLEFT_ROUND   = 13
	LittleDuckParserRIGHT_ROUND  = 14
	LittleDuckParserSTAR         = 15
	LittleDuckParserPLUS         = 16
	LittleDuckParserMINUS        = 17
	LittleDuckParserDIV          = 18
	LittleDuckParserEQUAL        = 19
	LittleDuckParserLESS_THAN    = 20
	LittleDuckParserGREATER_THAN = 21
	LittleDuckParserNOT_EQUAL    = 22
	LittleDuckParserLET_ID       = 23
	LittleDuckParserLET_STRING   = 24
	LittleDuckParserLET_INT      = 25
	LittleDuckParserLET_FLOAT    = 26
	LittleDuckParserWHITESPACE   = 27
)

// LittleDuckParser rules.
const (
	LittleDuckParserRULE_programa              = 0
	LittleDuckParserRULE_programa_vars         = 1
	LittleDuckParserRULE_vars                  = 2
	LittleDuckParserRULE_vars_id               = 3
	LittleDuckParserRULE_vars_id_next          = 4
	LittleDuckParserRULE_vars_more             = 5
	LittleDuckParserRULE_bloque                = 6
	LittleDuckParserRULE_bloque_more           = 7
	LittleDuckParserRULE_tipo                  = 8
	LittleDuckParserRULE_estatuto              = 9
	LittleDuckParserRULE_asignacion            = 10
	LittleDuckParserRULE_condicion             = 11
	LittleDuckParserRULE_condicion_else        = 12
	LittleDuckParserRULE_escritura             = 13
	LittleDuckParserRULE_escritura_params      = 14
	LittleDuckParserRULE_escritura_params_next = 15
	LittleDuckParserRULE_expresion             = 16
	LittleDuckParserRULE_expresion_next        = 17
	LittleDuckParserRULE_exp                   = 18
	LittleDuckParserRULE_exp_next              = 19
	LittleDuckParserRULE_termino               = 20
	LittleDuckParserRULE_termino_next          = 21
	LittleDuckParserRULE_factor                = 22
	LittleDuckParserRULE_factor_sign           = 23
	LittleDuckParserRULE_cte                   = 24
	LittleDuckParserRULE_empty                 = 25
)

// IProgramaContext is an interface to support dynamic dispatch.
type IProgramaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramaContext differentiates from other interfaces.
	IsProgramaContext()
}

type ProgramaContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramaContext() *ProgramaContext {
	var p = new(ProgramaContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LittleDuckParserRULE_programa
	return p
}

func (*ProgramaContext) IsProgramaContext() {}

func NewProgramaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramaContext {
	var p = new(ProgramaContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LittleDuckParserRULE_programa

	return p
}

func (s *ProgramaContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramaContext) PROGRAM() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserPROGRAM, 0)
}

func (s *ProgramaContext) LET_ID() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserLET_ID, 0)
}

func (s *ProgramaContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserSEMICOLON, 0)
}

func (s *ProgramaContext) Programa_vars() IPrograma_varsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPrograma_varsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPrograma_varsContext)
}

func (s *ProgramaContext) Bloque() IBloqueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBloqueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBloqueContext)
}

func (s *ProgramaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.EnterPrograma(s)
	}
}

func (s *ProgramaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.ExitPrograma(s)
	}
}

func (p *LittleDuckParser) Programa() (localctx IProgramaContext) {
	localctx = NewProgramaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, LittleDuckParserRULE_programa)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Match(LittleDuckParserPROGRAM)
	}
	{
		p.SetState(53)
		p.Match(LittleDuckParserLET_ID)
	}
	{
		p.SetState(54)
		p.Match(LittleDuckParserSEMICOLON)
	}
	{
		p.SetState(55)
		p.Programa_vars()
	}
	{
		p.SetState(56)
		p.Bloque()
	}

	return localctx
}

// IPrograma_varsContext is an interface to support dynamic dispatch.
type IPrograma_varsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPrograma_varsContext differentiates from other interfaces.
	IsPrograma_varsContext()
}

type Programa_varsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPrograma_varsContext() *Programa_varsContext {
	var p = new(Programa_varsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LittleDuckParserRULE_programa_vars
	return p
}

func (*Programa_varsContext) IsPrograma_varsContext() {}

func NewPrograma_varsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Programa_varsContext {
	var p = new(Programa_varsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LittleDuckParserRULE_programa_vars

	return p
}

func (s *Programa_varsContext) GetParser() antlr.Parser { return s.parser }

func (s *Programa_varsContext) Vars() IVarsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVarsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVarsContext)
}

func (s *Programa_varsContext) Empty() IEmptyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEmptyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEmptyContext)
}

func (s *Programa_varsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Programa_varsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Programa_varsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.EnterPrograma_vars(s)
	}
}

func (s *Programa_varsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.ExitPrograma_vars(s)
	}
}

func (p *LittleDuckParser) Programa_vars() (localctx IPrograma_varsContext) {
	localctx = NewPrograma_varsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, LittleDuckParserRULE_programa_vars)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(60)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case LittleDuckParserVAR:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(58)
			p.Vars()
		}

	case LittleDuckParserLEFT_CURLY:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(59)
			p.Empty()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IVarsContext is an interface to support dynamic dispatch.
type IVarsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVarsContext differentiates from other interfaces.
	IsVarsContext()
}

type VarsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVarsContext() *VarsContext {
	var p = new(VarsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LittleDuckParserRULE_vars
	return p
}

func (*VarsContext) IsVarsContext() {}

func NewVarsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VarsContext {
	var p = new(VarsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LittleDuckParserRULE_vars

	return p
}

func (s *VarsContext) GetParser() antlr.Parser { return s.parser }

func (s *VarsContext) VAR() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserVAR, 0)
}

func (s *VarsContext) Vars_id() IVars_idContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVars_idContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVars_idContext)
}

func (s *VarsContext) Vars_more() IVars_moreContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVars_moreContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVars_moreContext)
}

func (s *VarsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VarsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VarsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.EnterVars(s)
	}
}

func (s *VarsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.ExitVars(s)
	}
}

func (p *LittleDuckParser) Vars() (localctx IVarsContext) {
	localctx = NewVarsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, LittleDuckParserRULE_vars)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(62)
		p.Match(LittleDuckParserVAR)
	}
	{
		p.SetState(63)
		p.Vars_id()
	}
	{
		p.SetState(64)
		p.Vars_more()
	}

	return localctx
}

// IVars_idContext is an interface to support dynamic dispatch.
type IVars_idContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVars_idContext differentiates from other interfaces.
	IsVars_idContext()
}

type Vars_idContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVars_idContext() *Vars_idContext {
	var p = new(Vars_idContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LittleDuckParserRULE_vars_id
	return p
}

func (*Vars_idContext) IsVars_idContext() {}

func NewVars_idContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Vars_idContext {
	var p = new(Vars_idContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LittleDuckParserRULE_vars_id

	return p
}

func (s *Vars_idContext) GetParser() antlr.Parser { return s.parser }

func (s *Vars_idContext) LET_ID() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserLET_ID, 0)
}

func (s *Vars_idContext) Vars_id_next() IVars_id_nextContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVars_id_nextContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVars_id_nextContext)
}

func (s *Vars_idContext) COLON() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserCOLON, 0)
}

func (s *Vars_idContext) Tipo() ITipoContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITipoContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITipoContext)
}

func (s *Vars_idContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserSEMICOLON, 0)
}

func (s *Vars_idContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Vars_idContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Vars_idContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.EnterVars_id(s)
	}
}

func (s *Vars_idContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.ExitVars_id(s)
	}
}

func (p *LittleDuckParser) Vars_id() (localctx IVars_idContext) {
	localctx = NewVars_idContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, LittleDuckParserRULE_vars_id)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(66)
		p.Match(LittleDuckParserLET_ID)
	}
	{
		p.SetState(67)
		p.Vars_id_next()
	}
	{
		p.SetState(68)
		p.Match(LittleDuckParserCOLON)
	}
	{
		p.SetState(69)
		p.Tipo()
	}
	{
		p.SetState(70)
		p.Match(LittleDuckParserSEMICOLON)
	}

	return localctx
}

// IVars_id_nextContext is an interface to support dynamic dispatch.
type IVars_id_nextContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVars_id_nextContext differentiates from other interfaces.
	IsVars_id_nextContext()
}

type Vars_id_nextContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVars_id_nextContext() *Vars_id_nextContext {
	var p = new(Vars_id_nextContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LittleDuckParserRULE_vars_id_next
	return p
}

func (*Vars_id_nextContext) IsVars_id_nextContext() {}

func NewVars_id_nextContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Vars_id_nextContext {
	var p = new(Vars_id_nextContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LittleDuckParserRULE_vars_id_next

	return p
}

func (s *Vars_id_nextContext) GetParser() antlr.Parser { return s.parser }

func (s *Vars_id_nextContext) COMMA() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserCOMMA, 0)
}

func (s *Vars_id_nextContext) LET_ID() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserLET_ID, 0)
}

func (s *Vars_id_nextContext) Vars_id_next() IVars_id_nextContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVars_id_nextContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVars_id_nextContext)
}

func (s *Vars_id_nextContext) Empty() IEmptyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEmptyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEmptyContext)
}

func (s *Vars_id_nextContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Vars_id_nextContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Vars_id_nextContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.EnterVars_id_next(s)
	}
}

func (s *Vars_id_nextContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.ExitVars_id_next(s)
	}
}

func (p *LittleDuckParser) Vars_id_next() (localctx IVars_id_nextContext) {
	localctx = NewVars_id_nextContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, LittleDuckParserRULE_vars_id_next)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(76)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case LittleDuckParserCOMMA:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(72)
			p.Match(LittleDuckParserCOMMA)
		}
		{
			p.SetState(73)
			p.Match(LittleDuckParserLET_ID)
		}
		{
			p.SetState(74)
			p.Vars_id_next()
		}

	case LittleDuckParserCOLON:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(75)
			p.Empty()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IVars_moreContext is an interface to support dynamic dispatch.
type IVars_moreContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVars_moreContext differentiates from other interfaces.
	IsVars_moreContext()
}

type Vars_moreContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVars_moreContext() *Vars_moreContext {
	var p = new(Vars_moreContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LittleDuckParserRULE_vars_more
	return p
}

func (*Vars_moreContext) IsVars_moreContext() {}

func NewVars_moreContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Vars_moreContext {
	var p = new(Vars_moreContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LittleDuckParserRULE_vars_more

	return p
}

func (s *Vars_moreContext) GetParser() antlr.Parser { return s.parser }

func (s *Vars_moreContext) Vars_id() IVars_idContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVars_idContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVars_idContext)
}

func (s *Vars_moreContext) Vars_more() IVars_moreContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVars_moreContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVars_moreContext)
}

func (s *Vars_moreContext) Empty() IEmptyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEmptyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEmptyContext)
}

func (s *Vars_moreContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Vars_moreContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Vars_moreContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.EnterVars_more(s)
	}
}

func (s *Vars_moreContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.ExitVars_more(s)
	}
}

func (p *LittleDuckParser) Vars_more() (localctx IVars_moreContext) {
	localctx = NewVars_moreContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, LittleDuckParserRULE_vars_more)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(82)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case LittleDuckParserLET_ID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(78)
			p.Vars_id()
		}
		{
			p.SetState(79)
			p.Vars_more()
		}

	case LittleDuckParserLEFT_CURLY:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(81)
			p.Empty()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IBloqueContext is an interface to support dynamic dispatch.
type IBloqueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBloqueContext differentiates from other interfaces.
	IsBloqueContext()
}

type BloqueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBloqueContext() *BloqueContext {
	var p = new(BloqueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LittleDuckParserRULE_bloque
	return p
}

func (*BloqueContext) IsBloqueContext() {}

func NewBloqueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BloqueContext {
	var p = new(BloqueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LittleDuckParserRULE_bloque

	return p
}

func (s *BloqueContext) GetParser() antlr.Parser { return s.parser }

func (s *BloqueContext) LEFT_CURLY() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserLEFT_CURLY, 0)
}

func (s *BloqueContext) Bloque_more() IBloque_moreContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBloque_moreContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBloque_moreContext)
}

func (s *BloqueContext) RIGHT_CURLY() antlr.TerminalNode {
	return s.GetToken(LittleDuckParserRIGHT_CURLY, 0)
}

func (s *BloqueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BloqueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BloqueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.EnterBloque(s)
	}
}

func (s *BloqueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LittleDuckListener); ok {
		listenerT.ExitBloque(s)
	}
}

func (p *LittleDuckParser) Bloque() (localctx IBloqueContext) {
	localctx = NewBloqueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, LittleDuckParserRULE_bloque)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(84)
		p.Match(LittleDuckParserLEFT_CURLY)
	}
	{
		p.SetState(85)
		p.Bloque_more()
	}
	{
		p.SetState(86)
		p.Match(LittleDuckParserRIGHT_CURLY)
	}

	return localctx
}
